# jenkins-api.rs

./: .gitignore  CHANGES.md  Cargo.toml  README.md  shell.nix
src/: client.rs  helpers.rs  home.rs  lib.rs  queue.rs  view.rs
src/action/: maven.rs
src/client_internals/: builder.rs  csrf.rs  errors.rs  mod.rs  path.rs  tree.rs
src/job/: builder.rs  common.rs  mod.rs
src/nodes/: mod.rs
src/scm/: mod.rs
tests/: client.rs
