[package]
name = "jenkins_api"
version = "0.8.0"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "Bindings for the Jenkins JSON API"
repository = "https://github.com/mockersf/jenkins-api.rs"
homepage = "https://github.com/mockersf/jenkins-api.rs"
documentation = "https://docs.rs/jenkins_api"
keywords = ["jenkins"]
license = "MIT"
readme = "README.md"
edition = "2024"

[badges]
travis-ci = { repository = "mockersf/jenkins-api.rs" }

[dependencies]
url = "2.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_urlencoded = "0.7"
urlencoding = "2.1"
regex = "1.4"
log = "0.4"
thiserror = "2.0"
bytes = "1.10.1"

[dependencies.reqwest]
default-features = false
features = ["blocking", "json"]
version = "0.12"

[dev-dependencies]
env_logger = "0.11"
mockito = "1.7"
spectral = "0.6"
proptest = "1.7"

[features]
default = ["reqwest/default-tls"]
extra-fields-visibility = []
rustls-tls = ["reqwest/rustls-tls"]
